--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <h1>Welcome to maruz developer website</h1>
     <p>Please navigate to a product website from the list below.</p>
-    
+    <p><a href="https://clan-war-analyzer.webnode.cz/">Clan War Analyzer</a></p>
+    <p><a href="https://skrappka.webnode.cz/">Škrappka</a></p>
   </body>
 </html>
